Fix most warnings produced by IntelliJ inspection, fix-up and update more code to Java 11